# node-template3

./: .tmp.swp  Cargo.toml  README.md  tmp
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
