[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'pallets/*',
    'runtime',
]

[patch.crates-io]
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
frame-executive = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
frame-support = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
frame-support-procedural = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
frame-support-procedural-tools = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
frame-system = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-aura = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-babe = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-bounties = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-collective = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-indices = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-im-online = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-membership = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-multisig = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-offences = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-proxy = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-recovery = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-session = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-staking = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-tips = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-treasury = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
pallet-utility = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-block-builder = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-cli = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-client-db = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-executor = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-informant = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-network = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-offchain = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-service = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-api = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-core = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-externalities = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-io = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-offchain = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-rpc = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-session = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-staking = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-std = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-storage = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-tracing = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-trie = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-version = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate.git",   rev ="7d2de01" }