[package]
name = "node-template-praos"
version = "2.0.0"
authors = ["Anonymous"]
description = "A new FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template-praos"

[dependencies]
structopt = "0.3.8"
sc-cli = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", features = ["wasmtime"] }
sc-executor = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", features = ["wasmtime"] }
sc-client-api = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sc-telemetry = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sc-keystore = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sp-core = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sp-inherents = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sp-runtime = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}

sc-transaction-pool = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sp-transaction-pool = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sc-consensus = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sp-consensus = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sc-consensus-babe = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sp-consensus-babe = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sc-finality-grandpa = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sp-finality-grandpa = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.1.0"
sc-rpc = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sc-rpc-api = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sc-basic-authorship = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sp-api = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sp-blockchain = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sp-block-builder = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
substrate-frame-rpc-system = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
pallet-transaction-payment-rpc = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}

# These dependencies are used for runtime benchmarking
frame-benchmarking = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
frame-benchmarking-cli = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}

node-template-runtime-praos = { version = "3.0.0", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = {git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}

[features]
default = []
runtime-benchmarks = [
	"node-template-runtime-praos/runtime-benchmarks",
]
