[package]
name = "node-template-runtime-praos"
version = "3.0.0"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
serde = { version = "1.0.101", optional = true, features = ["derive"] }
static_assertions = "1.1.0"

frame-system = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }

#pallet-authorship = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
#pallet-membership = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
#pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }

pallet-babe = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
#pallet-indices = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }

#pallet-proxy = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
#pallet-multisig = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
#pallet-recovery = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false, features = ["historical"] }
pallet-staking = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
#pallet-treasury = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
#pallet-bounties = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
#pallet-tips = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }

sp-std = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}

sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01"}
sp-offchain = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false, optional = true }
hex-literal = { version = "0.3.1", optional = true }

template = { version = "3.0.0", default-features = false, package = "pallet-template-praos", path = "../pallets/template" }

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
#	"frame-support/std",
	"pallet-balances/std",
	"pallet-babe/std",
	"pallet-grandpa/std",
	"pallet-collective/std",
#	"pallet-membership/std",
#	"pallet-elections-phragmen/std",
#	"pallet-indices/std",
#	"pallet-im-online/std",
#	"pallet-proxy/std",
#	"pallet-multisig/std",
#	"pallet-recovery/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
#	"pallet-transaction-payment-rpc-runtime-api/std",
#	"pallet-treasury/std",
#	"pallet-bounties/std",
#	"pallet-tips/std",
#	"pallet-utility/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
#	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
#	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"template/std",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
