[package]
name = "node-template-runtime-praos"
version = "3.0.0"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
serde = { version = "1.0.101", optional = true, features = ["derive"] }
static_assertions = "1.1.0"
frame-support = { path = "../7d2de01/frame/support", default-features = false }
frame-system = { path = "../7d2de01/frame/system", default-features = false }
frame-executive = { path = "../7d2de01/frame/executive", default-features = false }

pallet-balances = { path = "../7d2de01/frame/balances", default-features = false }
pallet-collective = { path = "../7d2de01/frame/collective", default-features = false }

pallet-babe = { path = "../7d2de01/frame/babe", default-features = false }
#pallet-grandpa = { path = "../7d2de01/frame/grandpa", default-features = false }

pallet-randomness-collective-flip = {  path = "../7d2de01/frame/randomness-collective-flip", default-features = false }
pallet-sudo = {  path = "../7d2de01/frame/sudo", default-features = false }
pallet-scheduler = {  path = "../7d2de01/frame/scheduler", default-features = false }
pallet-session = {  path = "../7d2de01/frame/session", default-features = false, features = ["historical"] }
pallet-staking = {  path = "../7d2de01/frame/staking", default-features = false }
pallet-staking-reward-curve = {  path = "../7d2de01/frame/staking/reward-curve", default-features = false }
pallet-transaction-payment = {  path = "../7d2de01/frame/transaction-payment", default-features = false }
pallet-timestamp = {  path = "../7d2de01/frame/timestamp", default-features = false }
pallet-utility = { path = "../7d2de01/frame/utility", default-features = false }

sp-std = {  path = "../7d2de01/primitives/std", default-features = false }
sp-api = {path = "../7d2de01/primitives/api", default-features = false }
sp-core = { path = "../7d2de01/primitives/core", default-features = false }
sp-block-builder = { path = "../7d2de01/primitives/block-builder", default-features = false}

sp-consensus-babe = { path = "../7d2de01/primitives/consensus/babe", default-features = false }
sp-inherents = { path = "../7d2de01/primitives/inherents", default-features = false}
sp-offchain = { path = "../7d2de01/primitives/offchain", default-features = false }
sp-runtime = { path = "../7d2de01/primitives/runtime", default-features = false }
sp-session = { path = "../7d2de01/primitives/session", default-features = false }
sp-staking = { path = "../7d2de01/primitives/staking", default-features = false }
sp-transaction-pool = { path = "../7d2de01/primitives/transaction-pool", default-features = false }
sp-version = { path = "../7d2de01/primitives/version", default-features = false }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { path = "../7d2de01/frame/system/rpc/runtime-api", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { path = "../7d2de01/frame/transaction-payment/rpc/runtime-api", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { path = "../7d2de01/frame/benchmarking", default-features = false, optional = true }
frame-system-benchmarking = { path = "../7d2de01/frame/system/benchmarking", default-features = false, optional = true }
hex-literal = { version = "0.3.1", optional = true }

template = { version = "3.0.0", default-features = false, package = "pallet-template-praos", path = "../pallets/template" }

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
#	"frame-support/std",
	"pallet-balances/std",
	"pallet-babe/std",
#	"pallet-grandpa/std",
	"pallet-collective/std",
#	"pallet-membership/std",
#	"pallet-elections-phragmen/std",
#	"pallet-indices/std",
#	"pallet-im-online/std",
#	"pallet-proxy/std",
#	"pallet-multisig/std",
#	"pallet-recovery/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
#	"pallet-transaction-payment-rpc-runtime-api/std",
#	"pallet-treasury/std",
#	"pallet-bounties/std",
#	"pallet-tips/std",
#	"pallet-utility/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
#	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
#	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"template/std",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
