[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-template-praos'
version = "3.0.0"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet template for defining custom runtime logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

frame-support = { path = "../../7d2de01/frame/support", default-features = false }
frame-system = { path = "../../7d2de01/frame/system", default-features = false }
#frame-support = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
#frame-system = { git = "https://github.com/paritytech/substrate.git",  rev ="7d2de01", default-features = false }
sp-runtime = { path = "../../7d2de01/primitives/runtime", default-features = false }

[dev-dependencies]
serde = { version = "1.0.101" }
sp-core = { path = "../../7d2de01/primitives/core", default-features = false }
sp-io = { path = "../../7d2de01/primitives/io", default-features = false }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std'
]
